Feature/implement lear credential profile 2 (#19)
* add get user data from local hardcoded file, disable commitCredential

* minor fix

* refactor single credential per request (jwt/cwt)

* WIP: remove walt.id for payload generation

* convert generateVcPayload into reactive

* remove Walt.id from VerifiableCredentialService

* app native VcTemplate for CredentialOffer and IssuerMetadata

* remove Walt.id from template service and controller

* remove Walt.id from dependencies, IssuerApplicationConfigs and additional files

* fix tests

* refactor CredentialOffer, add public endpoints to SecurityConfig, fix wellknown endpoint

* FIX: vc endpoint, nonce cache error, local file user data

* FIX: credential in cwt

* FIX: tests

* clean from temporal code, add tests for verifiableCredentialService and CredentialIssuerMetadataService

* fixme's and tests

* some sonar fixes

* FIX: code duplication and dockerfile

* refactor iamAdapter paths from configs, add tests

* fixmes and tests

* Review

* Review 1

* Review 1

* credentialOffer with type by param

* FIX: pre-auth-code for credential offer

* DEL: get credential by id and credential cache

* add diagrams, refactor verifiableCredential service into hexagonal, update credential offer

* REFACTOR: credential issuer metadata

* ADD: batch credential endpoint

* WIP: Proof validation

* FIX: token nonce cache saving, WIP: Proof validation

* Proof validation: validation of nonce

* ADD: decodification public key from kid, WIP:signature validation

* Complete Proof validation, add tx_code in credential offer, fix test

* adapt proofValidation to reactive

* FIX: tests

* ADD: test and fixes

* ADD fixes

* refactor issuer domain to external domain

* ADD more test

* ADD deferred emission endpoint methods and entity

* Implement LEARCredentialEmployee, fix dids deletion

* credential entity db persistance and operations, deferred endpo